# epoll-shim

./: .gitignore
include/sys/: timerfd.h
src/: CMakeLists.txt  epoll.c  epoll_shim_ctx.h  epollfd_ctx.c  epollfd_ctx.h  eventfd_ctx.h  signalfd_ctx.h  timerfd_ctx.h
test/: atf-c-leakcheck.h  epoll-test.c  eventfd-ctx-test.c  macos-ports.h  pipe-test.c  socketpair-test.c
